--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "cloudinary": "^1.41.0",
     "cloudinary-react": "^1.8.1",
+    "daisyui": "^4.4.24",
     "emailjs-com": "^3.2.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
